[package]
name = "rustls-examples"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Rustls example code and tests."
publish = false

[dependencies]
async-std = { workspace = true, optional = true }
clap = { workspace = true }
env_logger = { workspace = true }
hickory-resolver = { workspace = true }
log = { workspace = true }
mio = { workspace = true }
portable-atomic-util = { version = "0.2.4", default-features = false, optional = true }
rcgen = { workspace = true }
rustls = { path = "../rustls", features = [ "logging" ]}
serde = { workspace = true }
tokio = { workspace = true }
webpki-roots = { workspace = true }

[features]
# XXX TBD ??? ???:
portable-atomic-util = ["dep:portable-atomic-util"]
# for XXX XXX:
critical-section = ["portable-atomic-util", "rustls/critical-section"]
