[package]
name = "rustls-examples"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Rustls example code and tests."
publish = false

[dependencies]
async-std = { workspace = true, optional = true }
clap = { workspace = true }
env_logger = { workspace = true }
hickory-resolver = { workspace = true }
log = { workspace = true }
mio = { workspace = true }
# XXX TBD MOVE TO HERE:
# portable-atomic-util = { version = "0.2.4", default-features = false, optional = true }
rcgen = { workspace = true }
rustls = { path = "../rustls", features = [ "logging" ]}
serde = { workspace = true }
tokio = { workspace = true }
webpki-roots = { workspace = true }
# XXX TBD MOVE THESE ADDED ITEM(S) - ???
# XXX TBD USE XXX XXX XXX FROM GITHUB WITH @brodycj XXX PROPOSAL FOR NOW - `portable-atomic` PR REF: https://github.com/taiki-e/portable-atomic/pull/195
# XXX XXX ~~TODO USE PUBLISHED CRATE ONCE @brodycj XXX PROPOSAL IS ACCEPTED~~
# XXX XXX TODO USE VERSION NUMBER FROM TOP-LEVEL CARGO TOML
portable-atomic-util = { version = "0.2.4", default-features = false, features = ["alloc"], optional = true }

[features]
# for XXX XXX:
critical-section = ["portable-atomic-util", "rustls/critical-section"]
