[package]
name = "rustls-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
rustls = { path = "../rustls" }

[features]
default = []
aws_lc_rs = ["rustls/aws_lc_rs"]
fips = ["rustls/fips", "aws_lc_rs"]
ring = ["rustls/ring"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
