[package]
name = "rustls-post-quantum"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
readme = "README.md"
description = "Experimental support for post-quantum key exchange in rustls"
homepage = "https://github.com/rustls/rustls"
repository = "https://github.com/rustls/rustls"
categories = ["network-programming", "cryptography"]

[dependencies]
rustls = { version = "0.23.2", features = ["aws_lc_rs"], path = "../rustls", default-features = false }
# aws-lc-rs = { version = "1.8.1", features = ["unstable"], default-features = false }
aws-lc-rs = { git = "https://github.com/brodycj/aws-lc-rs", rev = "89d5789191a7f0d85c7f6c3a77cb686e7bb2c2c0", optional = true, default-features = false, features = ["unstable"] }
[dev-dependencies]
env_logger = "0.10" # 0.11 requires 1.71 MSRV even as a dev-dep (due to manifest features)
webpki-roots = "0.26"
